@@ -1,6 +1,14 @@
 # Telecharger JavaFX
 - [Lien](https://gluonhq.com/products/javafx/)
 
+# Telecharger fasterxml.jackson
+
+- [Lien](https://central.sonatype.com/namespace/com.fasterxml.jackson.core)
+
 # Lancer le projet
-- Décompressez JavaFX et placer le contenu dans un dossier nommé javafx à la racine du projet
-- Lancer le programme en mentionnant ```--module-path javafx/lib --add-modules javafx.controls,javafx.fxml``` à la JVM
+- Creer un dossier lib à la racine du projet
+- Creer dans ce dossier lib 2 dossiers: javafx et fasterxml
+- Décompressez JavaFX SDK (Windows ou Linux) dans lib/javafx
+- Mettez jackson-core.jar et jackson-databind.jar dans lib/fasterxml
+- Si vous êtes sur Linux, dans les scripts il faut remplacer les ; dans le flag -cp par des :
+- Lancer le serveur et le client avec les scripts présents dans le dossier resources
